-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.3, dev
-
None
-
-
ad783bb70 (dev), c36e6fec8 (6.7), 9010e3505 (6.6), 099281d65 (tqtc/lts-6.5)
as title.
check the attachment,
Reproduce steps:
- play the sound
- wait until the sound finished . At the end of the sound ,there will be a warning in the console."[vorbis @ 000002531E630000] Could not update timestamps for discarded samples."
- press the button to play the audio again . Can not play the sound ,only one extra same warning will be printed in the console.
ps: if press the `play ` button before the audio finished playing , it can replay the same sound again.
- mentioned in
-
Page Loading...
For Gerrit Dashboard: QTBUG-118127 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
522428,6 | QFFmpegMediaPlayer: Fix stop() not resetting position if EndOfMedia | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
527498,2 | QFFmpegMediaPlayer: Fix stop() not resetting position if EndOfMedia | 6.7 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
527553,2 | QFFmpegMediaPlayer: Fix stop() not resetting position if EndOfMedia | 6.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
527560,2 | QFFmpegMediaPlayer: Fix stop() not resetting position if EndOfMedia | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |